fix for IE11 projects collapsing bug

--- a/assets/styles/pages/_index.scss
+++ b/assets/styles/pages/_index.scss
@@ -65,6 +65,7 @@ body.index {
     .project-row {
       display: flex;
       flex-direction: row;
+      flex: 1 1 auto;
     }
 
     @media (max-width: $screen-lg) {
